--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -40,6 +40,6 @@
     "img": "https://images.unsplash.com/photo-1611162617474-5b21e879e113?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8bmV0ZmxpeHxlbnwwfHwwfHw%3D&w=1000&q=80",
     "demo": "https://netflix-clone-59f8e.web.app/",
     "case": "",
-    "github": "https://netflix-clone-59f8e.firebaseapp.com/"
+    "github": "https://netflix-clone-59f8e.firebaseapp.com"
   }
 ]
